--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,15 @@
+anyio==4.4.0
+appdirs==1.4.4
+appnope==0.1.4
+asgiref==3.8.1
+asttokens==2.4.1
+backcall==0.2.0
+beautifulsoup4==4.12.3
+bs4==0.0.2
+certifi==2024.7.4
+cffi==1.16.0
+charset-normalizer==3.3.2
+cryptography==42.0.8
 cssselect==1.2.0
 decorator==5.1.1
 diff-match-patch==20230430
@@ -6,6 +18,7 @@ Django==4.2.10
 django-filter==24.2
 django-import-export==4.1.0
 djangorestframework==3.15.1
+drf-yasg==1.21.7
 exceptiongroup==1.2.1
 executing==1.0.0
 fake-useragent==1.1.0
@@ -14,14 +27,16 @@ h11==0.14.0
 html5lib==1.1
 httpcore==1.0.5
 httpx==0.27.0
-
+idna==3.7
 importlib-metadata==5.1.0
 importlib-resources==5.10.0
+inflection==0.5.1
 ipython==8.5.0
 jedi==0.18.1
 lxml==4.9.1
 matplotlib-inline==0.1.6
 numpy==2.0.0
+packaging==24.1
 pandas==2.2.2
 parse==1.19.0
 parso==0.8.3
@@ -34,30 +49,30 @@ psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pycosat==0.6.3
-
+pycparser==2.22
 pyee==8.2.2
 Pygments==2.13.0
-
+pyOpenSSL==24.1.0
 pyppeteer==1.0.2
 pyquery==1.4.3
-
 python-dateutil==2.9.0.post0
 python-telegram-bot==21.2
 pytz==2024.1
-
+PyYAML==6.0.1
+requests==2.32.3
 requests-html==0.10.0
-
-
+six==1.16.0
 sniffio==1.3.1
 soupsieve==2.3.2.post1
 sqlparse==0.4.4
 stack-data==0.5.0
 tablib==3.5.0
-
+tqdm==4.66.4
 traitlets==5.4.0
 typing_extensions==4.10.0
 tzdata==2024.1
-
+uritemplate==4.1.1
+urllib3==1.26.19
 virtualenv==20.25.1
 w3lib==2.1.0
 wcwidth==0.2.5
